2009-05-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-title-bar.c: Added a static function to determine
	whether the status area is visible, since it can be hidden in
	many ways.  Partial fix for NB#116866.

2009-05-20  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home-view.c: Modified parallax applet panning method to
	  something that looks a lot better.

2009-05-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.49

2009-05-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#103823 - Unable to restore home applets from backup and
	restore application.

	* src/Makefile.am:
	* src/hildon-desktop.prebackup.sh (added): Add prebackup script which
	copies the system plugins config to user config if that not exist yet.

2009-05-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Apply patch from Alejandro Pineiro for NB#110763.
	* src/a11y/hildon-desktop-a11y.c: Load a11y support as modules if
	available.

	* src/mb/hd-app.c (delete_open_menus): New. Close menus when new
	application appears. This is in preparation for fixing NB#116326.

2009-05-15  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#114467 - Not updating titles of minimized applications.
	Fixes: NB#113266 - In the task switcher, name of the application and 
	name of the file is missing in certain scenarios.

	* src/home/hd-task-navigator.c: Connecting to a signal to sense when
	  the window title has been changed.
	* src/home/hd-task-navigator.c: Handling the title markup.

2009-05-14  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Order non-positioned task launcher entries case-insensitively.

	* src/launcher/hd-launcher-tree.c:

2009-05-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Order task launcher entries alphabetically if they don't have a position.
	Fixes: NB#116215

	* src/launcher/hd-launcher-item.c: Add hard-coded positions for default
	apps in 'Applications' subgroup.