@@ -1,6 +1,7 @@
 hildon-desktop (1:2.2.50-1~unreleased) unstable; urgency=low
 
-  * write_something_here
+  Kimmo:
+  * Fix a bogus rotation to landscape caused by a background application.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 18 May 2009 12:16:52 +0300
 
